# print-layout

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: standalone-app-plan.md
src/: constants.ts  desktop.ts  fonts.ts  image-utils.ts  layout-utils.ts  main.ts  persistence.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
